# c-ai_sdk

./: README.md
ChatServer/: CMakeLists.txt  ChatServer.conf  ChatServer.h  ChatSever.cc  err.txt  main.cc
ChatServer/required/: main需求.txt  策略.txt
include/: ChatGPTProvider.h  DataManager.h  DeepSeekProvider.h  GeminiProvider.h  LLMManager.h  LLMProvider.h  SessionManager.h  common.h
include/until/: mylog.h
sdk/: CMakeLists.txt
sdk/include/: ChatSDK.h  DeepSeekProvider.h  LLMManager.h  OllamaLLMProvider.h  SessionManager.h  common.h
sdk/include/until/: mylog.h
sdk/src/: ChatSDK.cc  OllamaLLMProvider.cc
sdk/src/until/: mylog.cc
src/: ChatGPTProvider.cc  ChatSDK.cc  DataManager.cc  DeepSeekProvider.cc  GeminiProvider.cc  LLMManager.cc  SessionManager.cc
src/until/: mylog.cc
test/: CMakeLists.txt  testDeepSeekProvider.cc  testProvider.cc
